@@ -5,6 +5,7 @@ v1.2.2.???
 - xxmHttp: support basic authentication (401, "WWW-Authenticate: Basic")
 - parser: in code, treat lines that start with "<" and end with ">" as HTML
 - xxmLocal: custom handling of WWW-Authenticate, when debugging hold 'X' on authenticated page load to clear stored credentials
+- xxmHttp: thread to wait on groups of (slow) connections that have all content in buffer
 
 v1.2.1.337
 - xxmHttp: IPv6 support
